[gd_scene load_steps=3 format=3 uid="uid://domflln8gu5gh"]

[ext_resource type="Script" path="res://main.gd" id="1"]
[ext_resource type="Theme" uid="uid://d173cxxvbo3a1" path="res://default_theme.tres" id="2"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2")
script = ExtResource("1")

[node name="MainContainer" type="HSplitContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 3

[node name="DataPanel" type="PanelContainer" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Container" type="VBoxContainer" parent="MainContainer/DataPanel"]
layout_mode = 2

[node name="Header" type="Label" parent="MainContainer/DataPanel/Container"]
layout_mode = 2
text = "Data"

[node name="Tree" type="Tree" parent="MainContainer/DataPanel/Container"]
layout_mode = 2
size_flags_vertical = 3

[node name="ConsolePanel" type="PanelContainer" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Container" type="VBoxContainer" parent="MainContainer/ConsolePanel"]
layout_mode = 2

[node name="Label" type="Label" parent="MainContainer/ConsolePanel/Container"]
layout_mode = 2
text = "Console"

[node name="Console" type="TextEdit" parent="MainContainer/ConsolePanel/Container"]
layout_mode = 2
size_flags_vertical = 3
context_menu_enabled = false
shortcut_keys_enabled = false
selecting_enabled = false
virtual_keyboard_enabled = false
highlight_current_line = true

[node name="InputContainer" type="HBoxContainer" parent="MainContainer/ConsolePanel/Container"]
layout_mode = 2
alignment = 1

[node name="ColumnPanel" type="PanelContainer" parent="MainContainer/ConsolePanel/Container/InputContainer"]
layout_mode = 2

[node name="Column" type="VBoxContainer" parent="MainContainer/ConsolePanel/Container/InputContainer/ColumnPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="MainContainer/ConsolePanel/Container/InputContainer/ColumnPanel/Column"]
layout_mode = 2
text = "Column"

[node name="Input" type="SpinBox" parent="MainContainer/ConsolePanel/Container/InputContainer/ColumnPanel/Column"]
layout_mode = 2

[node name="RowPanel" type="PanelContainer" parent="MainContainer/ConsolePanel/Container/InputContainer"]
layout_mode = 2

[node name="Row" type="VBoxContainer" parent="MainContainer/ConsolePanel/Container/InputContainer/RowPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="MainContainer/ConsolePanel/Container/InputContainer/RowPanel/Row"]
layout_mode = 2
text = "Row"

[node name="Input" type="SpinBox" parent="MainContainer/ConsolePanel/Container/InputContainer/RowPanel/Row"]
layout_mode = 2
allow_greater = true

[node name="ResultButton" type="Button" parent="MainContainer/ConsolePanel/Container/InputContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "Get Data"

[node name="DialogContainer" type="CenterContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Popup" type="AcceptDialog" parent="DialogContainer"]
dialog_text = "MESSAGE"

[connection signal="pressed" from="MainContainer/ConsolePanel/Container/InputContainer/ResultButton" to="." method="_on_ResultButton_pressed"]
